--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,6 @@ body {
   font-size: var(--normal-font-size);
   color: var(--title-color);
   background: var(--white-color);
-  overflow: hidden;
 }
 
 h1,
@@ -128,10 +127,12 @@ label {
   font-weight: var(--font-medium);
 }
 
+/* Common css */
+
 .container-fluid {
   width: 100%;
   height: 100%;
-  padding: 0 20px;
+  padding: 20px;
 }
 
 .btn {
