--- a/src/index.css
+++ b/src/index.css
@@ -321,7 +321,7 @@ All pages css start
 }
 
 .css-hlgwow{
-  padding-left: 40px;
+  padding-left: 40px !important;
 }
 
 /* =============== LogIn Page CSS ================= */
