--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ ul {
 
 a {
   text-decoration: none !important;
-  color: var(--title-color);
+  color: var(--description-color);
 }
 
 img {
@@ -239,7 +239,7 @@ All pages css start
 }
 
 .logIn_page .form_area .remember_me p{
-  font-family: var(--font-medium);
+  font-weight: var(--font-medium);
   color: var(--title-color);
 }
 
