--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --title-color: #101828;
   --description-color: #718096;
   --white-color: #ffffff;
+  --gray-200: #E4E7EC;
   --border-color: #E2E8F0;
   /* TYPOGRAPHY */
   --body-font: "Inter", sans-serif;
@@ -15,8 +16,8 @@
   --h1-font-size: 32px;
   --h2-font-size: 24px;
   --h3-font-size: 20px;
-  --normal-font-size: 15px;
-  --small-font-size: 12px;
+  --normal-font-size: 16px;
+  --small-font-size: 14px;
   /* Font Weight */
   --font-normal: 400;
   --font-medium: 500;
@@ -34,11 +35,15 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+}
+
 body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--title-color);
-  background: var(--white-color);
+  background: #FAFAFA;
 }
 
 h1,
@@ -87,6 +92,10 @@ a {
   color: var(--description-color);
 }
 
+hr {
+  border: 1px solid var(--border-color);
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -129,10 +138,64 @@ label {
 
 /* Common css */
 
+.ant-layout-content {
+  background: #EDF2F7;
+  border-radius: 24px;
+  padding: 20px 25px;
+  margin-top: 100px !important;
+}
+
+.ant-layout.body-layout.css-dev-only-do-not-override-fpg3f5{
+  margin-left: 250px;
+}
+
+.ant-layout.hideSidebar.css-dev-only-do-not-override-fpg3f5{
+  margin-left: -250px;
+}
+
+aside.ant-layout-sider.ant-layout-sider-dark.sidebar{
+  left: 0;
+}
+
+aside.ant-layout-sider.ant-layout-sider-dark.hideSidebar{
+  left: -100%;
+}
+
+/* .ant-layout{
+  overflow: hidden !important;
+} */
+
+:where(.css-dev-only-do-not-override-fpg3f5).ant-layout {
+  background: #FAFAFA !important;
+}
+
 .container-fluid {
   width: 100%;
   height: 100%;
   padding: 20px;
+}
+
+.breadcrumb_list {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.breadcrumb_list li {
+  list-style: none;
+  cursor: pointer;
+  line-height: normal;
+}
+
+.breadcrumb_list li.active {
+  padding: 4px 8px;
+  background: #E8EDFF;
+  color: var(--secondary-color);
+  border-radius: 6px;
+}
+
+.breadcrumb_list .icons {
+  font-size: 24px;
 }
 
 .btn {
@@ -142,7 +205,7 @@ label {
   transition: all 0.3s ease-in-out;
   width: fit-content;
   border-radius: 8px;
-  font-size: var(--normal-font-size);
+  font-size: var(--small-font-size);
   font-weight: var(--font-medium);
   cursor: pointer;
   font-weight: var(--font-bold);
@@ -155,7 +218,7 @@ label {
   transition: all 0.3s ease-in-out;
   width: fit-content;
   border-radius: 8px;
-  font-size: var(--normal-font-size);
+  font-size: var(--small-font-size);
   font-weight: var(--font-medium);
   cursor: pointer;
   display: flex;
@@ -163,6 +226,15 @@ label {
   justify-content: center;
   gap: 10px;
   font-weight: var(--font-bold);
+}
+
+.btn_b {
+  background: #101828;
+  padding: 10px 16px;
+  color: var(--white-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  border-radius: 8px;
 }
 
 .btn_s .icons {
@@ -186,6 +258,18 @@ label {
 .btn_area {
   display: flex;
   align-items: center;
+  gap: 20px;
+}
+
+.logo {
+  width: auto;
+  height: 32px;
+}
+
+.section_title{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   gap: 20px;
 }
 
@@ -228,7 +312,7 @@ All pages css start
   text-align: center;
 }
 
-.logIn_page .form_area .desc{
+.logIn_page .form_area .desc {
   font-weight: var(--font-medium);
 }
 
@@ -238,7 +322,7 @@ All pages css start
   gap: 10px;
 }
 
-.logIn_page .form_area .remember_me p{
+.logIn_page .form_area .remember_me p {
   font-weight: var(--font-medium);
   color: var(--title-color);
 }
@@ -324,9 +408,13 @@ All pages css start
   margin: auto;
 }
 
-.css-hlgwow{
+.css-hlgwow {
   padding-left: 40px !important;
 }
+
+
+
+
 
 /* =============== LogIn Page CSS ================= */
 /* =============== LogIn Page CSS ================= */
